// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register tablet slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "paddingHorizontal": "20%",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 73,
          "marginVertical": 10,
          "width": 285,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "marginVertical": 25,
        }
      }
    >
      Daily Universal Register
    </Text>
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`2. lead one and one tablet slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`3. lead one full width tablet slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`4. lead two no pic and two tablet slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileZ />
    </View>
  </View>
</View>
`;

exports[`5. leaders slice - medium 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": "100%",
        "width": 1366,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileM />
      </View>
    </View>
  </View>
</View>
`;

exports[`6. secondary one tablet slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`7. secondary four tablet slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`8. secondary one and columnist - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingLeft": 10,
          "paddingTop": 10,
          "width": "33%",
        }
      }
    >
      <TileAA />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingRight": 10,
          "width": "67%",
        }
      }
    >
      <TileAB />
    </View>
  </View>
</View>
`;

exports[`9. secondary two and two slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`10. lead one and four slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 10,
          "width": "50%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`11. secondary two no pic and two slice - medium 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
  </View>
</View>
`;

exports[`12. daily universal register tablet slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "paddingHorizontal": "25%",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 73,
          "marginVertical": 10,
          "width": 285,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "marginVertical": 25,
        }
      }
    >
      Daily Universal Register
    </Text>
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`13. lead one and one tablet slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`14. lead one full width tablet slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`15. lead two no pic and two tablet slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileZ />
    </View>
  </View>
</View>
`;

exports[`16. leaders slice - wide 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": "100%",
        "width": 1366,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
    </View>
  </View>
</View>
`;

exports[`17. secondary one tablet slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`18. secondary four tablet slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`19. secondary one and columnist - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingLeft": 10,
          "paddingTop": 10,
          "width": "33%",
        }
      }
    >
      <TileAA />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingRight": 10,
          "width": "67%",
        }
      }
    >
      <TileAB />
    </View>
  </View>
</View>
`;

exports[`20. secondary two and two slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`21. lead one and four slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 10,
          "width": "50%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`22. secondary two no pic and two slice - wide 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
  </View>
</View>
`;

exports[`23. daily universal register tablet slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#F0F0F0",
        "flex": 1,
        "paddingHorizontal": "25%",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 73,
          "marginVertical": 10,
          "width": 285,
        }
      }
    />
    <Text
      style={
        Object {
          "color": "#850029",
          "fontFamily": "TimesDigitalW04",
          "fontSize": 16,
          "marginVertical": 25,
        }
      }
    >
      Daily Universal Register
    </Text>
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginBottom": 25,
          "marginHorizontal": 10,
          "width": "100%",
        }
      }
    />
    <Image
      style={
        Object {
          "height": 45,
          "width": 60,
        }
      }
    />
    <TileS />
  </View>
</View>
`;

exports[`24. lead one and one tablet slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "70%",
        }
      }
    >
      <TileU />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "30%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`25. lead one full width tablet slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileR />
</View>
`;

exports[`26. lead two no pic and two tablet slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 20,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileX />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileY />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileZ />
    </View>
  </View>
</View>
`;

exports[`27. leaders slice - huge 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 40,
      "paddingTop": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
      }
    }
  >
    <Image
      style={
        Object {
          "height": 51,
          "width": 283,
        }
      }
    />
    <View
      style={
        Object {
          "paddingBottom": 5,
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#850029",
            "fontFamily": "TimesDigitalW04-Regular",
            "fontSize": 16,
            "lineHeight": 18,
            "textAlign": "center",
          }
        }
      >
         Leading Articles 
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "maxWidth": "100%",
        "width": 1366,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "paddingHorizontal": 10,
            "width": "33%",
          }
        }
      >
        <TileAG />
      </View>
    </View>
  </View>
</View>
`;

exports[`28. secondary one tablet slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <TileW />
</View>
`;

exports[`29. secondary four tablet slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "width": "25%",
        }
      }
    >
      <TileC />
    </View>
  </View>
</View>
`;

exports[`30. secondary one and columnist - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "paddingLeft": 10,
          "paddingTop": 10,
          "width": "33%",
        }
      }
    >
      <TileAA />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "paddingRight": 10,
          "width": "67%",
        }
      }
    >
      <TileAB />
    </View>
  </View>
</View>
`;

exports[`31. secondary two and two slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileV />
      </View>
    </View>
    <View
      style={
        Object {
          "borderBottomColor": "#DBDBDB",
          "borderBottomWidth": 1,
          "borderStyle": "solid",
          "marginHorizontal": 10,
        }
      }
    />
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
          "paddingBottom": 5,
        }
      }
    >
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
      <View
        style={
          Object {
            "borderColor": "#DBDBDB",
            "borderRightWidth": 1,
            "borderStyle": "solid",
            "marginVertical": 10,
          }
        }
      />
      <View
        style={
          Object {
            "width": "50%",
          }
        }
      >
        <TileG />
      </View>
    </View>
  </View>
</View>
`;

exports[`32. lead one and four slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "paddingHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "padding": 10,
          "width": "50%",
        }
      }
    >
      <TileAC />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
      <View
        style={
          Object {
            "borderBottomColor": "#DBDBDB",
            "borderBottomWidth": 1,
            "borderStyle": "solid",
            "marginHorizontal": 10,
          }
        }
      />
      <TileAD />
    </View>
  </View>
</View>
`;

exports[`33. secondary two no pic and two slice - huge 1`] = `
<View
  style={
    Object {
      "alignSelf": "center",
      "maxWidth": "100%",
      "width": 1366,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileAE />
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "marginHorizontal": 10,
      }
    }
  />
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "marginHorizontal": 10,
      }
    }
  >
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
    <View
      style={
        Object {
          "borderColor": "#DBDBDB",
          "borderRightWidth": 1,
          "borderStyle": "solid",
          "marginVertical": 10,
        }
      }
    />
    <View
      style={
        Object {
          "width": "50%",
        }
      }
    >
      <TileG />
    </View>
  </View>
</View>
`;
